# jsoneval-rs

./: .codesightignore  .cursorrules  .gitignore  BOTTLENECK_ANALYSIS.md  CACHE_PERF_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLI_FEATURES.md  COMPILED_LOGIC_STORE.md  COMPLETE_IMPLEMENTATION.md  CONFIGURATION_GUIDE.md  CUSTOM_OPERATORS.md  Cargo.toml  EVALUATION_CACHE.md  FINAL_OPTIMIZATIONS.md  IMPLEMENTATION_SUMMARY.md  OPERATOR_COVERAGE.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_TODO.md  PARSED_SCHEMA_CACHE.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_CONCLUSION.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_RESULTS.md  PERFORMANCE_TUNING.md  PHASE1_RESULTS.md  README.md  SUBFORM_FEATURE.md  TABLE_REDESIGN_PROPOSAL.md  TIMING_INSTRUMENTATION.md  TWO_PHASE_EVALUATION.md  WARP.md  benchmark_analysis.md  build-bindings.sh  build.rs  cache_implementation_plan.md  context7.json  csharp-binding-result.md  final_fix.sh  fix_optimizations.sh  (+7 more)
.agent/rules/: binding-rules.md  codebase.md
.agentlens/: .manifest.json  AGENT.md  INDEX.md
.agentlens/files/: bindings-csharp-JsonEvalRs-Main-cs.md  bindings-npm-packages-react-native-cpp-jsi-bridge-cpp.md  bindings-npm-packages-react-native-cpp-json-eval-bridge-cpp.md  bindings-npm-packages-react-native-src-index-tsx.md  bindings-npm-packages-webcore-src-index-ts.md  bindings-react-native-packages-react-native-cpp-jsi-bridge-cpp.md  bindings-react-native-packages-react-native-cpp-json-eval-bridge-cpp.md  bindings-react-native-packages-react-native-src-index-tsx.md  bindings-web-packages-core-src-index-ts.md  src-jsoneval-dependents-rs.md  src-rlogic-compiled-rs.md
.cargo/: config.toml
.codesight/: CODESIGHT.md  cicd.md  components.md  config.md  graph.md  libs.md  middleware.md
.codesight/wiki/: index.md  libraries.md  log.md  overview.md  ui.md
.github/: BUILD_ALIGNMENT.md  SETUP_GUIDE.md
.github/workflows/: README.md  auto-release.yml  build-bindings.yml  deploy-docs.yml  pages.yml  publish.yml  release.yml
.windsurf/rules/: binding-rules.md
benches/: rlogic_bench.rs
bindings/: PUBLISHING.md  README.md
bindings/common/: package.json  tsconfig.json
bindings/csharp/: DI_WEBAPI_GUIDE.md  JsonEvalRs.AssemblyInfo.cs  JsonEvalRs.DependencyInjection.cs  JsonEvalRs.LayoutOverlayMerger.cs  JsonEvalRs.Main.cs  JsonEvalRs.Native.Common.cs  JsonEvalRs.Native.NetCore.cs  JsonEvalRs.Native.NetStandard.cs  JsonEvalRs.Native.ParsedCache.cs  JsonEvalRs.ParsedCache.cs  JsonEvalRs.ReturnFormat.cs  JsonEvalRs.Shared.cs  JsonEvalRs.Subforms.cs  JsonEvalRs.cs  JsonEvalRs.csproj  JsonEvalRs.targets  MIGRATION.modular.md  MODULAR_ARCHITECTURE.md  README.md  README.modular.md
bindings/csharp-example/: .gitignore  JsonEvalBenchmark.csproj  Program.cs  README.md
bindings/npm/: README.md  build-android.sh  package.json
bindings/react-native/: README.md  (+5 more)
docs/: 2026-07-13-layout-hidden-ref-repopulation-plan.md  2026-07-14-all-bindings-resolved-schema-parity-plan.md  2026-07-14-resolved-schema-parity-plan.md  2026-07-14-rider-shared-cache-plan.md  2026-07-15-indexed-subform-transaction-plan.md  2026-07-15-subform-default-hydration-plan.md  COMMON_MISTAKES.md  Gemfile  OPERATORS_SUMMARY.md  OPERATOR_CROSS_REFERENCE.md  README.md  SUBFORM_FEATURE.md  _config.yml  app.config.ts  caching-and-performance.md  index.md  layout-resolver-plan.md  nuxt.config.ts  operators-arithmetic.md  operators-array.md  operators-comparison.md  operators-core.md  operators-date.md  operators-logical.md  operators-math.md  operators-string.md  operators-table.md  operators-utility.md  package.json  selective-evaluation.md  usage-csharp.md  usage-react-native.md  usage-web-node.md
example/: evaluated-schema-comp.json  evaluated-schema.json  schema-parse-output.json  sorted_evaluations.json  zip-data.json  zip.json
examples/: README.md  basic.rs  basic_msgpack.rs  basic_parsed.rs  benchmark.rs  cache_demo.rs  cache_disable.rs  spaj_toggle.rs
scripts/: bump-version.sh
src/: eval_cache.rs  eval_data.rs  ffi.rs  json_parser.rs  lib.rs  main.rs  parse_schema.old  parse_schema.rs  parsed_schema.rs  parsed_schema_cache.rs  path_utils.rs  subform_methods.rs  table_evaluate.rs  table_metadata.rs  topo_sort.old  topo_sort.rs  wasm.rs
tests/: age_rust_debug.rs  array_tests.rs  basic_tests.rs  caching_context.rs  canonical_subform_scope_guardrail.rs  check_static.rs  compile_and_run_logic_context_tests.rs  compile_and_run_logic_tests.rs  compile_and_run_separate_tests.rs  computed_value_dependents_test.rs  config_tests.rs  core_validation_tests.rs  date_offset_tests.rs  date_tests.rs  decimal_precision_test.rs  dependents_cascade_tests.rs  edge_case_tests.rs  eval_data_tests.rs  excel_operators_tests.rs  ffi_validation_tests.rs  hidden_filtering_test.rs  indexing_test.rs  integration_tests.rs  json_eval_tests.rs  json_parser_tests.rs  layout_hidden_dependents_test.rs  logical_operator_crosscheck.rs  logical_value_test.rs  math_tests.rs  msgpack_parsed_integrity_test.rs  operator_tests.rs  parsed_schema_static_arrays_test.rs  parsed_schema_tests.rs  parsed_zip_scenario.rs  path_utils_tests.rs  repro_issue_82.rs  resolved_schema_parity_test.rs  selective_eval.rs  selective_eval_advanced.rs  selective_eval_subforms.rs  (+18 more)
(+326 files in other folders)
