[package]
name = "json-eval-rs"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[dependencies]
datalogic-rs = { version = "4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
simd-json = "0.14"
indexmap = { version = "2.1", features = ["serde"] }
chrono = "0.4"
ahash = { version = "0.8", features = ["serde"] }
smallvec = "1.13"
dashmap = "6.0"
regex = "1.10"

# Optional rayon for parallel processing (configurable via feature flag)
[dependencies.rayon]
version = "1.10"
optional = true

[lib]
name = "json_eval_rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "json-eval-cli"
path = "src/main.rs"

[features]
default = []
parallel = ["rayon"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "console_error_panic_hook", "js-sys"]
ffi = []

[dependencies.wasm-bindgen]
version = "0.2"
optional = true
features = ["serde-serialize"]

[dependencies.serde-wasm-bindgen]
version = "0.6"
optional = true

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[dependencies.js-sys]
version = "0.3"
optional = true

[dependencies.once_cell]
version = "1.19"

# WebAssembly support for getrandom
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
lto = "fat"              # Full Link Time Optimization for maximum performance
codegen-units = 1        # Single codegen unit for best optimization
opt-level = 3            # Maximum optimizations
strip = true             # Strip symbols for smaller binary

[profile.release.package."*"]
opt-level = 3