[package]
name = "json-eval-rs"
version = "0.0.31"
edition = "2021"
description = "High-performance JSON Logic evaluator with schema validation and dependency tracking. Built on blazing-fast Rust engine."
license = "MIT"
authors = ["Muhamad Rizki <muhamad.rizki@quadrant.co.id>"]
repository = "https://github.com/byrizki/json-eval-rs"


[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
simd-json = "0.17"
indexmap = { version = "2.1", features = ["serde"] }
chrono = "0.4"
ahash = { version = "0.8", features = ["serde"] }
smallvec = "1.13"
dashmap = "6.0"
regex = "1.10"
rmp-serde = "1.3"
once_cell = "1.19"
rayon = { version = "1.10", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }

[lib]
name = "json_eval_rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "json-eval-cli"
path = "src/main.rs"

[features]
default = []
parallel = ["rayon"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "console_error_panic_hook", "js-sys"]
ffi = []

# Windows-specific: Use mimalloc for better performance
[target.'cfg(windows)'.dependencies]
mimalloc = "0.1"

# WebAssembly support for getrandom
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
lto = "fat"              # Full Link Time Optimization for maximum performance
codegen-units = 1        # Single codegen unit for best optimization
opt-level = 3            # Maximum optimizations
strip = true             # Strip symbols for smaller binary

[profile.release.package."*"]
opt-level = 3

# Windows resource compiler for adding version info to DLL
[build-dependencies]
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"